# satire

./: Cargo.toml  README.md
dpll/: Cargo.toml
dpll/src/: cnf.rs  formula.rs  lib.rs  main.rs  parser.rs  prelude.rs  report.rs  solver.rs
src/: formula.rs  lib.rs  main.rs  parser.rs  prelude.rs  report.rs  solver.rs  tests.rs
src/solver/: cdcl.rs  dpll.rs
src/solver/cdcl/: conflict.rs  tracker.rs  vsids.rs
testcases/satch_cnfs/: var4clause3.cnf
