[package]
name = "satire"
version = "0.0.1"
authors = ["Yechan Bae <yechan@gatech.edu>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Qwaz/satire"
description = "An educational SAT solver written in Rust"
exclude = [
    "testcases/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8.4"
snafu = "0.6.10"
typed-index-collections = "3.0"

[dev-dependencies]
paste = "1.0.5"
